# autoggregate

./: Cargo.toml  Procfile  README.md  lefthook.yml
server/src/: handlers.rs  main.rs
src/: main.rs  search.rs
tests/: integration_test.rs
ui/: .vercelignore  README.md  package.json  tailwind.config.js
ui/src/components/: SearchBar.svelte
ui/src/routes/: _layout.svelte  index.svelte
ui/static/: manifest.json
