[package]
name = "autogreggate"
version = "0.1.0"
authors = ["Ilya Zub <zaoooza92@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/ilyazub/autoggregate"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
regex = "1.3.7"
soup = "0.5.0"
reqwest = { version = "0.10", features = ["json"] }
futures = "0.3.5"
futures-util = "0.3.5"
