[package]
name = "autogreggate"
version = "0.1.0"
authors = ["Ilya Zub <zaoooza92@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/ilyazub/autoggregate"

[[bin]]
name = "autoggregate"
path = "src/main.rs"

[dependencies]
tokio = { version = "0.2", features = [ "full" ] }
reqwest = { version = "0.10", features = [ "json" ] }
soup = "0.5.0"
actix-rt = "1.1.1"
actix-web = { version = "2.0.0" }
serde = { version = "1.0.111", features = [ "derive" ] }
serde_json = { version = "1.0.53", features = [ "preserve_order" ] }
env_logger = "0.7.1"
actix-cors = "0.2.0"
